feat (UI): ToolBar样式。

--- a/Example/Podfile
+++ b/Example/Podfile
@@ -9,8 +9,8 @@ target 'VMImagePicker_Example' do
 #  pod 'VMImagePicker', '1.0.0-dev'
   pod 'VMImagePicker/UI', :path => '../'
   
-  pod 'ViewModel', :path => '../../ViewModel'
-#  pod 'ViewModel', '1.0.0-dev'
+#  pod 'ViewModel', :path => '../../ViewModel'
+  pod 'ViewModel'#, '1.0.1'
   pod 'TZImagePickerController'
 
   target 'VMImagePicker_Tests' do
