--- a/Example/VMImagePicker/VMImagePicker-Info.plist
+++ b/Example/VMImagePicker/VMImagePicker-Info.plist
@@ -24,6 +24,8 @@
 	<string>1.0</string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
+	<key>NSCameraUsageDescription</key>
+	<string>VMImagePicker is going to use camera.</string>
 	<key>NSPhotoLibraryUsageDescription</key>
 	<string>VMImagePicker is going to use album.</string>
 	<key>UILaunchStoryboardName</key>
